--- a/index.html
+++ b/index.html
@@ -12,4 +12,30 @@
 </body>
 </html>
 A Decetralized Exchange app for cTokens and Decentralized cryptocurreny
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CDexApp</title>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.0/dist/web3.min.js"></script>
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <h1>CDexApp</h1>
+    <div>
+        <label for="account">Account:</label>
+        <input type="text" id="account" placeholder="Your Ethereum address">
+    </div>
+    <div>
+        <button id="getBalances">Get Balances</button>
+        <div id="balances"></div>
+    </div>
+    <div>
+        <label for="amount">Amount:</label>
+        <input type="number" id="amount" placeholder="Amount to swap">
+        <button id="swapTokens">Swap Tokens</button>
+    </div>
+</body>
+</html>
 
